syntax = "proto3";

package mamey.payments;

// Payment service for MameyNode blockchain
service PaymentService {
    // P2P payments
    rpc SendP2PPayment(SendP2PPaymentRequest) returns (SendP2PPaymentResponse);
    rpc GetP2PPayment(GetP2PPaymentRequest) returns (GetP2PPaymentResponse);
    rpc RequestP2PPayment(RequestP2PPaymentRequest) returns (RequestP2PPaymentResponse);
    rpc DeclineP2PPayment(DeclineP2PPaymentRequest) returns (DeclineP2PPaymentResponse);
    
    // Merchant payments
    rpc ProcessMerchantPayment(ProcessMerchantPaymentRequest) returns (ProcessMerchantPaymentResponse);
    rpc GetMerchantPayment(GetMerchantPaymentRequest) returns (GetMerchantPaymentResponse);
    rpc RefundMerchantPayment(RefundMerchantPaymentRequest) returns (RefundMerchantPaymentResponse);
    
    // Government disbursements
    rpc CreateDisbursement(CreateDisbursementRequest) returns (CreateDisbursementResponse);
    rpc ProcessDisbursement(ProcessDisbursementRequest) returns (ProcessDisbursementResponse);
    rpc GetDisbursement(GetDisbursementRequest) returns (GetDisbursementResponse);
    rpc BatchProcessDisbursements(BatchProcessDisbursementsRequest) returns (BatchProcessDisbursementsResponse);
    
    // Recurring payments
    rpc CreateRecurringPayment(CreateRecurringPaymentRequest) returns (CreateRecurringPaymentResponse);
    rpc UpdateRecurringPayment(UpdateRecurringPaymentRequest) returns (UpdateRecurringPaymentResponse);
    rpc CancelRecurringPayment(CancelRecurringPaymentRequest) returns (CancelRecurringPaymentResponse);
    rpc ListRecurringPayments(ListRecurringPaymentsRequest) returns (ListRecurringPaymentsResponse);
    
    // Multisignature payments
    rpc CreateMultisigPayment(CreateMultisigPaymentRequest) returns (CreateMultisigPaymentResponse);
    rpc SignMultisigPayment(SignMultisigPaymentRequest) returns (SignMultisigPaymentResponse);
    rpc GetMultisigPayment(GetMultisigPaymentRequest) returns (GetMultisigPaymentResponse);
    
    // Payment history
    rpc ListPayments(ListPaymentsRequest) returns (ListPaymentsResponse);
}

// Send P2P payment request
message SendP2PPaymentRequest {
    string from_account = 1;
    string to_account = 2;
    string amount = 3;
    string currency = 4;
    string memo = 5;
}

// Send P2P payment response
message SendP2PPaymentResponse {
    string payment_id = 1;
    string transaction_id = 2;
    PaymentStatus status = 3;
    bool success = 4;
    string error_message = 5;
}

// Get P2P payment request
message GetP2PPaymentRequest {
    string payment_id = 1;
}

// Get P2P payment response
message GetP2PPaymentResponse {
    PaymentInfo payment = 1;
    bool success = 2;
    string error_message = 3;
}

message RequestP2PPaymentRequest {
    string from_account = 1; // Requestor
    string to_account = 2;   // Payer
    string amount = 3;
    string currency = 4;
    string memo = 5;
}

message RequestP2PPaymentResponse {
    string request_id = 1;
    bool success = 2;
    string error_message = 3;
}

message DeclineP2PPaymentRequest {
    string request_id = 1;
    string reason = 2;
}

message DeclineP2PPaymentResponse {
    bool success = 1;
    string error_message = 2;
}

// Process merchant payment request
message ProcessMerchantPaymentRequest {
    string merchant_id = 1;
    string customer_account = 2;
    string amount = 3;
    string currency = 4;
    string order_id = 5;
    map<string, string> metadata = 6;
}

// Process merchant payment response
message ProcessMerchantPaymentResponse {
    string payment_id = 1;
    string transaction_id = 2;
    PaymentStatus status = 3;
    bool success = 4;
    string error_message = 5;
}

// Get merchant payment request
message GetMerchantPaymentRequest {
    string payment_id = 1;
}

// Get merchant payment response
message GetMerchantPaymentResponse {
    MerchantPaymentInfo payment = 1;
    bool success = 2;
    string error_message = 3;
}

// Refund merchant payment request
message RefundMerchantPaymentRequest {
    string payment_id = 1;
    string amount = 2;
    string reason = 3;
}

// Refund merchant payment response
message RefundMerchantPaymentResponse {
    string refund_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Create disbursement request
message CreateDisbursementRequest {
    string program_id = 1;
    string recipient_id = 2;
    string amount = 3;
    string currency = 4;
    string purpose = 5;
}

// Create disbursement response
message CreateDisbursementResponse {
    string disbursement_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Process disbursement request
message ProcessDisbursementRequest {
    string disbursement_id = 1;
}

// Process disbursement response
message ProcessDisbursementResponse {
    string payment_id = 1;
    string transaction_id = 2;
    PaymentStatus status = 3;
    bool success = 4;
    string error_message = 5;
}

// Get disbursement request
message GetDisbursementRequest {
    string disbursement_id = 1;
}

// Get disbursement response
message GetDisbursementResponse {
    DisbursementInfo disbursement = 1;
    bool success = 2;
    string error_message = 3;
}

message BatchProcessDisbursementsRequest {
    repeated string disbursement_ids = 1;
}

message BatchProcessDisbursementsResponse {
    uint32 processed_count = 1;
    uint32 failed_count = 2;
    repeated string failed_ids = 3;
    bool success = 4;
    string error_message = 5;
}

// Create recurring payment request
message CreateRecurringPaymentRequest {
    string from_account = 1;
    string to_account = 2;
    string amount = 3;
    string currency = 4;
    string frequency = 5;  // "daily", "weekly", "monthly", "yearly"
    uint64 start_date = 6;
    uint64 end_date = 7;
    string memo = 8;
}

// Create recurring payment response
message CreateRecurringPaymentResponse {
    string recurring_payment_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Update recurring payment request
message UpdateRecurringPaymentRequest {
    string recurring_payment_id = 1;
    string amount = 2;
    string frequency = 3;
    uint64 end_date = 4;
}

// Update recurring payment response
message UpdateRecurringPaymentResponse {
    bool success = 1;
    string error_message = 2;
}

// Cancel recurring payment request
message CancelRecurringPaymentRequest {
    string recurring_payment_id = 1;
}

// Cancel recurring payment response
message CancelRecurringPaymentResponse {
    bool success = 1;
    string error_message = 2;
}

// List recurring payments request
message ListRecurringPaymentsRequest {
    string account_id = 1;
    uint32 limit = 2;
    uint32 offset = 3;
}

// List recurring payments response
message ListRecurringPaymentsResponse {
    repeated RecurringPaymentInfo payments = 1;
    uint32 total_count = 2;
    bool success = 3;
    string error_message = 4;
}

// Create multisig payment request
message CreateMultisigPaymentRequest {
    repeated string signers = 1;
    uint32 required_signatures = 2;
    string to_account = 3;
    string amount = 4;
    string currency = 5;
    string memo = 6;
}

// Create multisig payment response
message CreateMultisigPaymentResponse {
    string payment_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Sign multisig payment request
message SignMultisigPaymentRequest {
    string payment_id = 1;
    string signer_account = 2;
    bytes signature = 3;
}

// Sign multisig payment response
message SignMultisigPaymentResponse {
    uint32 signatures_count = 1;
    bool completed = 2;
    bool success = 3;
    string error_message = 4;
}

// Get multisig payment request
message GetMultisigPaymentRequest {
    string payment_id = 1;
}

// Get multisig payment response
message GetMultisigPaymentResponse {
    MultisigPaymentInfo payment = 1;
    bool success = 2;
    string error_message = 3;
}

// List payments request
message ListPaymentsRequest {
    string account_id = 1;
    string payment_type = 2;  // "p2p", "merchant", "disbursement", "recurring", "multisig"
    uint32 limit = 3;
    uint32 offset = 4;
}

// List payments response
message ListPaymentsResponse {
    repeated PaymentInfo payments = 1;
    uint32 total_count = 2;
    bool success = 3;
    string error_message = 4;
}

// Payment info
message PaymentInfo {
    string payment_id = 1;
    string from_account = 2;
    string to_account = 3;
    string amount = 4;
    string currency = 5;
    PaymentStatus status = 6;
    string transaction_id = 7;
    uint64 created_at = 8;
    uint64 completed_at = 9;
    string memo = 10;
}

// Merchant payment info
message MerchantPaymentInfo {
    string payment_id = 1;
    string merchant_id = 2;
    string customer_account = 3;
    string amount = 4;
    string currency = 5;
    string order_id = 6;
    PaymentStatus status = 7;
    uint64 created_at = 8;
}

// Disbursement info
message DisbursementInfo {
    string disbursement_id = 1;
    string program_id = 2;
    string recipient_id = 3;
    string amount = 4;
    string currency = 5;
    string purpose = 6;
    PaymentStatus status = 7;
    uint64 created_at = 8;
    uint64 processed_at = 9;
}

// Recurring payment info
message RecurringPaymentInfo {
    string recurring_payment_id = 1;
    string from_account = 2;
    string to_account = 3;
    string amount = 4;
    string currency = 5;
    string frequency = 6;
    uint64 start_date = 7;
    uint64 end_date = 8;
    uint64 next_payment_date = 9;
    RecurringPaymentStatus status = 10;
}

// Multisig payment info
message MultisigPaymentInfo {
    string payment_id = 1;
    repeated string signers = 2;
    uint32 required_signatures = 3;
    uint32 current_signatures = 4;
    repeated string signed_by = 5;
    string to_account = 6;
    string amount = 7;
    string currency = 8;
    MultisigPaymentStatus status = 9;
    uint64 created_at = 10;
}

// Payment status enum
enum PaymentStatus {
    PENDING = 0;
    PROCESSING = 1;
    COMPLETED = 2;
    FAILED = 3;
    CANCELLED = 4;
}

// Recurring payment status enum
enum RecurringPaymentStatus {
    RECURRING_STATUS_ACTIVE = 0;
    RECURRING_STATUS_PAUSED = 1;
    RECURRING_STATUS_CANCELLED = 2;
    RECURRING_STATUS_COMPLETED = 3;
}

// Multisig payment status enum
enum MultisigPaymentStatus {
    MULTISIG_STATUS_PENDING_SIGNATURES = 0;
    MULTISIG_STATUS_COMPLETED = 1;
    MULTISIG_STATUS_EXECUTED = 2;
    MULTISIG_STATUS_CANCELLED = 3;
}



